--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-converter",
+  "name": "json-array-converter",
   "version": "1.0.0",
   "description": "a json-to-array module written in JS",
   "main": "index.js",
